# GRND0

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSING.md  NOTICE  README.md  RELEASING.md  RESULTS.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  compose.knowledge.example.yml  docker-compose.yml  grnd0  grnd0.ps1  pyproject.toml  release-manifest.yaml
.github/workflows/: ci.yml
artifacts/: capability-profile-proof.json  clean-install-proof.json  dependency-licenses.json  drive-backend-routing-mixed.json  drive-showcase-gpu.json  drive-showcase-local.json  drive-showcase-no-web.json  drive-showcase-web.json  gpu-runtime-proof.json  leak-gate-report.json  provenance-ledger.csv  sbom.spdx.json  wsl-routing-proof.json
assets/showcase/: README.md  TRANSCRIPT.md
configs/: GRND0_MODEL_CATALOG.json  GRND0_MODEL_INVENTORY.json  knowledge-sources.example.json  lanes.example.json
configs/mcp/: connections.yaml
data/harness_templates/: abstention.json  comprehension.json  recursive-context.json  reference-chat.json  subject-resolution.json  synthesis-outline.json  synthesis-section.json  (+1 more)
docs/: ARCHITECTURE.md  CONCEPTS.md  CONNECTING-DATA.md  DIRECTION.md  EXTENDING.md  INFERENCE.md
models/: README.md
scripts/: drive-backend-routing.py  drive-showcase.py  openai-conformance-fixture.py
sdk/: LICENSE  README.md
tests/: test_public_surface.py
tools/: bootstrap-env.ps1  clean-install.ps1  export-receipt.py  grnd0_models.py  leak-gate.py  start-local-inference-gpu.ps1  start-wsl-model.ps1
(+42 files in other folders)
